--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>myBlog</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classPath:com/myBlog/sys/applicationContext.xml</param-value>
+    <param-value>classpath*:com/myBlog/sys/applicationContext.xml</param-value>
   </context-param>
   <servlet>
     <servlet-name>springmvc</servlet-name>
