--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -6,7 +6,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/blog
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 #定义初始连接数  
 jdbc.initialSize=0  
 #定义最大连接数  
